[FIX] anchor button text content not swhoing properly when it too long

--- a/src/modules/CategoriesLeftMenu/CategoriesLeftMenu.css
+++ b/src/modules/CategoriesLeftMenu/CategoriesLeftMenu.css
@@ -7,7 +7,7 @@
 }
 
 .categories-container-left-menu {
-    @apply mx-2 text-sm
+    @apply mx-2 text-md
 }
 
 
